--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "myApp",
+  "name": "sharesystem",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
-    "@solana/web3.js": "^0.90.5",
+    "@solana/web3.js": "jgensler8/solana-web3.js",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -44,6 +44,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:unit": "react-scripts test --testMatch '**/!(*.integration).test.tsx'",
+    "test:integration": "react-scripts test --testMatch '**/*.integration.test.tsx'",
     "eject": "react-scripts eject",
     "bootstrap:ts": "echo 'not working due to react typescript and ts-node imcompatible tsconfig.json' && ts-node src/lib/bootstrap.tsx",
     "bootstrap:shell": "npm run bootstrap:shell:account && npm run bootstrap:shell:airdrop",
