--- a/src/program-rust-searchengine/Cargo.toml
+++ b/src/program-rust-searchengine/Cargo.toml
@@ -18,6 +18,7 @@ solana-program = "=1.4.8"
 thiserror = "1.0"
 num-traits = "0.2"
 num-derive = "0.3"
+borsh = "0.8.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
