add healthcheck, constants for instruction id, reference local web3.js by file path

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@capacitor/core": "2.4.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
-    "@solana/web3.js": "jgensler8/solana-web3.js",
+    "@solana/web3.js": "file:../../../js/solana-web3.js",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -47,6 +47,7 @@
     "test:unit": "react-scripts test --testMatch '**/!(*.integration).test.tsx'",
     "test:integration": "react-scripts test --testMatch '**/*.integration.test.tsx'",
     "eject": "react-scripts eject",
+    "bootstrap:fake-deploy": "echo '{}' > ./src/lib/keygen.out.json && echo '{}' > ./src/lib/resource_deploy.out.json && echo '{}' > ./src/lib/searchengine_deploy.out.json",
     "bootstrap:ts": "echo 'not working due to react typescript and ts-node imcompatible tsconfig.json' && ts-node src/lib/bootstrap.tsx",
     "bootstrap:shell": "npm run bootstrap:shell:account && npm run bootstrap:shell:airdrop",
     "bootstrap:shell:account": "solana-keygen new --no-passphrase --outfile ./src/lib/keygen.out.json",
