get mostly working end to end test for setting data. currently blocked on borsh js writing field index where rust doesn't

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@capacitor/core": "2.4.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
-    "@solana/web3.js": "^0.92.2",
+    "@solana/web3.js": "file:../../../js/solana-web3.js",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "borsh": "^0.3.1",
     "ionicons": "^5.4.0",
     "mkdirp": "^0.5.5",
     "mz": "^2.7.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
+    "web-encoding": "^1.1.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -47,9 +49,8 @@
     "test:unit": "react-scripts test --testMatch '**/!(*.integration).test.tsx'",
     "test:integration": "react-scripts test --testMatch '**/*.integration.test.tsx'",
     "eject": "react-scripts eject",
-    "bootstrap:fake-deploy": "echo '{}' > ./src/lib/keygen.out.json && echo '{}' > ./src/lib/resource_deploy.out.json && echo '{}' > ./src/lib/searchengine_deploy.out.json",
-    "bootstrap:ts": "echo 'not working due to react typescript and ts-node imcompatible tsconfig.json' && ts-node src/lib/bootstrap.tsx",
     "bootstrap:fake-deploy": "echo '{}' > ./src/lib/resource_deploy.out.json && echo '{}' > ./src/lib/searchengine_deploy.out.json && echo '[]' > ./src/lib/keygen.out.json",
+    "bootstrap:ts": "echo 'not working due to react typescript and ts-node imcompatible tsconfig.json' && ts-node src/lib/bootstrap.tsx",
     "bootstrap:shell": "npm run bootstrap:shell:account && npm run bootstrap:shell:airdrop",
     "bootstrap:shell:account": "solana-keygen new --no-passphrase --outfile ./src/lib/keygen.out.json",
     "bootstrap:shell:airdrop": "solana --url localhost airdrop 10000 ./src/lib/keygen.out.json",
