--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@capacitor/core": "2.4.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
-    "@solana/web3.js": "file:../../../js/solana-web3.js",
+    "@solana/web3.js": "^0.92.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
