--- a/src/program-rust-resource/Cargo.toml
+++ b/src/program-rust-resource/Cargo.toml
@@ -13,8 +13,11 @@ edition = "2018"
 no-entrypoint = []
 
 [dependencies]
-byteorder = "1.3"
 solana-program = "=1.4.8"
+thiserror = "1.0"
+num-traits = "0.2"
+num-derive = "0.3"
+borsh = "0.8.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
