--- a/package.json
+++ b/package.json
@@ -1,46 +1,27 @@
 {
   "name": "sharesystem",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "2.4.6",
-    "@ionic/react": "^5.5.0",
-    "@ionic/react-router": "^5.5.0",
     "@solana/web3.js": "^0.93.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@tsconfig/recommended": "^1.0.1",
+    "@testing-library/user-event": "^12.8.0",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/node": "^12.20.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0",
     "borsh": "^0.3.1",
-    "ionicons": "^5.4.0",
-    "mkdirp": "^0.5.5",
     "mz": "^2.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.2",
     "web-encoding": "^1.1.0",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -91,9 +72,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.6",
-    "@types/mkdirp": "^1.0.1",
-    "@types/mz": "^2.7.3"
-  },
-  "description": "An Ionic project"
+    "@types/bootstrap": "^5.0.8",
+    "@types/mz": "^2.7.3",
+    "@types/react-router-bootstrap": "^0.24.5"
+  }
 }
