use mock for firebase deploy. looks like deploys to dev net are not working :(

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ src/lib/searchengine_deploy_raw.out.json
 src/lib/searchengine_database_keygen.out.json
 src/lib/searchengine_database_deploy.out.json
 src/lib/store/
+
+.firebaserc
+.firebase/
