--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@solana/web3.js": "file:../../js/solana-web3.js",
+    "@solana/web3.js": "^0.93.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
@@ -35,8 +35,11 @@
     "bootstrap:shell": "npm run bootstrap:shell:account && npm run bootstrap:shell:airdrop",
     "bootstrap:shell:account": "solana-keygen new --no-passphrase --outfile ./src/lib/keygen.out.json",
     "bootstrap:shell:airdrop": "solana --url localhost airdrop 10000 ./src/lib/keygen.out.json",
-    "bootstrap:searchengine-database": "npm run run:program-rust:bootstrap -- bootstrap-search-engine-database",
-    "bootstrap:resource-database": "npm run run:program-rust:bootstrap -- bootstrap-resource-database",
+    "bootstrap-dev:shell:airdrop": "solana --url devnet airdrop 10 ./src/lib/keygen.out.json",
+    "bootstrap:searchengine-database": "npm run run:program-rust:bootstrap -- searchengine",
+    "bootstrap-dev:searchengine-database": "npm run run:program-rust:bootstrap -- searchengine https://devnet.solana.com",
+    "bootstrap:resource-database": "npm run run:program-rust:bootstrap -- resource",
+    "bootstrap-dev:resource-database": "npm run run:program-rust:bootstrap -- resource https://devnet.solana.com",
     "clean:bootstrap": "rm ./src/lib/keygen.out.json",
     "clean:store": "rm -rf src/lib/store/config.json",
     "build:program-rust:resource": "cargo build-bpf --manifest-path=./src/program-rust-resource/Cargo.toml --bpf-out-dir=dist/program && npm run clean:store",
@@ -44,11 +47,13 @@
     "test:program-rust:resource": "cargo test-bpf --manifest-path=./src/program-rust-resource/Cargo.toml",
     "watch:program-rust:resource": "cd src/program-rust-resource && RUST_BACKTRACE=1 cargo watch --clear --exec test",
     "deploy:program-rust:resource": "solana --url localhost --config ./src/lib/keygen.out.json program deploy dist/program/solana_bpf_resource.so > src/lib/resource_deploy.out.json && cat src/lib/resource_deploy.out.json | jq '.programId' > src/lib/resource_deploy_raw.out.json",
+    "deploy-dev:program-rust:resource": "solana --url devnet --config ./src/lib/keygen.out.json program deploy dist/program/solana_bpf_resource.so > src/lib/resource_deploy.out.json && cat src/lib/resource_deploy.out.json | jq '.programId' > src/lib/resource_deploy_raw.out.json",
     "build:program-rust:searchengine": "cargo build-bpf --manifest-path=./src/program-rust-searchengine/Cargo.toml --bpf-out-dir=dist/program && npm run clean:store",
     "clean:program-rust:searchengine": "cargo clean --manifest-path=./src/program-rust-searchengine/Cargo.toml && rm -rf ./dist && npm run clean:store",
     "test:program-rust:searchengine": "cargo test-bpf --manifest-path=./src/program-rust-searchengine/Cargo.toml",
     "watch:program-rust:searchengine": "cd src/program-rust-searchengine && RUST_BACKTRACE=1 cargo watch --clear --exec test",
     "deploy:program-rust:searchengine": "solana --url localhost --config ./src/lib/keygen.out.json program deploy dist/program/solana_bpf_searchengine.so > src/lib/searchengine_deploy.out.json && cat src/lib/searchengine_deploy.out.json | jq '.programId' > src/lib/searchengine_deploy_raw.out.json",
+    "deploy-dev:program-rust:searchengine": "solana --url devnet --config ./src/lib/keygen.out.json program deploy dist/program/solana_bpf_searchengine.so > src/lib/searchengine_deploy.out.json && cat src/lib/searchengine_deploy.out.json | jq '.programId' > src/lib/searchengine_deploy_raw.out.json",
     "build:program-rust:bootstrap": "cargo build --manifest-path=./src/program-rust-bootstrap/Cargo.toml && npm run clean:store",
     "clean:program-rust:bootstrap": "cargo clean --manifest-path=./src/program-rust-bootstrap/Cargo.toml && rm -rf ./dist && npm run clean:bootstrap",
     "test:program-rust:bootstrap": "cargo test --manifest-path=./src/program-rust-bootstrap/Cargo.toml",
